# test_tr_xlsx

./: CMakeLists.txt  main.cpp
bash/: copy_new_pro.py  lqm.sh  lts.sh  make_code_file.py
bash/template/: cxx_cpp.template  cxx_hpp.template  qt_wid.template
config/language/cn/: cn.qm  window.ts  window.xlsx  window_ts_ts.ts  window_ts_xlsx.xlsx  window_xlsx_ts.ts  window_xlsx_xlsx.xlsx
config/language/cn/dst_ts/: window.ts
config/language/cn/src_ts/: window.ts
config/language/cn/tm_xlsx/: window.xlsx
config/language/cn/tr_qm/: cn.qm
lib/: libQXlsxQt5.so.0.1.4.4  libtinyxml2.so.10
util/: Tconfig.h  Ttinyxml.h  Ttinyxml_ts.h  Ttx_tmt_tr.h  Tvlog.h  Txlsx.h  Txml_tr.h
window/: main_window.cpp  main_window.h  wid_check_dig.cpp  wid_check_dig.h
